[package]
name = "slice"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = "1.5"
parking_lot = "0.12"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
crc32fast = "1.3"
memmap2 = "0.9"
crossbeam = "0.8"
tempfile = "3.8"
bit-vec = "0.6"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand = "0.8"
futures = "0.3"

[[bench]]
name = "lsm_bench"
harness = false

[[bench]]
name = "standard_benchmarks"
harness = false
